BUGFIX: Set min-height to make errors visible

--- a/Neos.Neos/Resources/Private/Styles/Login.scss
+++ b/Neos.Neos/Resources/Private/Styles/Login.scss
@@ -199,7 +199,7 @@ html,
 		.neos-actions {
 			bottom: 0;
 			width: 100%;
-			height: $unit;
+			min-height: $unit;
 
 			button {
 				height: $unit;
